main/argo-proj/events/events/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argo-events-ingress
  namespace: argo-events
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/auth-tls-secret: argo-events/cloudflare-authenticated-origin-pull-ca
    nginx.ingress.kubernetes.io/auth-tls-verify-client: "on"
    nginx.ingress.kubernetes.io/auth-tls-verify-depth: "1"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  rules:
  - host: argo-events.flou.dev
    http:
      paths:
      - path: /discord-bot-node
        pathType: ImplementationSpecific
        backend:
          service:
            name: discord-bot-node-eventsource-eventsource-svc
            port:
              number: 12000
      - path: /coflnet-bot
        pathType: ImplementationSpecific
        backend:
          service:
            name: discord-bot-node-eventsource-eventsource-svc
            port:
              number: 12000
